# go-leadopt

./: bash_scripts.txt  skaffold.yaml
backend/: Chart.yaml  values-prod.yaml  values.yaml
backend/src/: .dockerignore  .gitignore  .pg_service.conf  .pgpass  Dockerfile  README.md  database.go  go.mod  go.sum  main.go  mongodb.go  pyproject.toml
backend/src/controllers/: profile.controller.go
backend/src/db/: db.go
backend/src/lo_interpreter/: apps.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/src/lo_interpreter/migrations/: 0001_initial.py
backend/src/lo_interpreter/templates/: index.html
backend/src/lo_profile/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/lo_profile/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_user.py  0004_linkedin_delete_profile.py  0005_alter_linkedin_avatar_alter_linkedin_url.py  0006_contact_alter_linkedin_id.py  0007_alter_contact_contact_mobile_and_more.py  0008_rename_contact_linkedin_url_contact_linkedin_url_and_more.py  0009_rename_addr_1_contact_addr_1_and_more.py  0010_contact_activity_contact_avatar_and_more.py  0011_alter_contact_heading_alter_contact_project_name_and_more.py  0012_alter_contact_last_checked_date.py
backend/src/lo_user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/lo_user/migrations/: 0001_initial.py
backend/src/main/: asgi.py  settings.py  urls.py
backend/src/models/: profile.model.go
backend/src/static/nic/: full_contacts.csv  result_nic.csv  result_nic_20231010.csv  result_nic_20240930191652.csv
(+58 files in other folders)
